# django_boilerplate

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
_project_/: settings.py  urls.py
